--- a/Fonts/ttf-gentium-plus/build
+++ b/Fonts/ttf-gentium-plus/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=6.200
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://software.sil.org/downloads/r/gentium/GentiumPlus-$VERSION.zip
 
@@ -21,5 +21,5 @@ install -Dm644 OFL.txt "$DESTDIR/usr/share/LICENSES/ttf-gentium-plus.license"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../ttf-gentium-plus@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../ttf-gentium-plus@$VERSION.tar.gz
 exit
