--- a/System/ncurses/build
+++ b/System/ncurses/build
@@ -7,14 +7,14 @@ PATCH=2
 VERSION=0.3.2
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/sabotage-linux/netbsd-curses/archive/refs/tags/v$VERSION.tar.gz
 gzip -cd v$VERSION.tar.gz | tar -x
 cd netbsd-curses-$VERSION
 
 make PREFIX=/usr all
-make PREFIX=/usr DESTDIR="$DESTDIR" install
+make PREFIX=/usr DESTDIR=$DESTDIR install
 
 ln -sf libterminfo.so "$DESTDIR/usr/lib/libtinfo.so"
 ln -sf libterminfo.a  "$DESTDIR/usr/lib/libtinfo.a"
@@ -27,5 +27,5 @@ find "$DESTDIR" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../ncurses@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../ncurses@$VERSION.tar.gz
 exit
