--- a/Archive/bzip2/build
+++ b/Archive/bzip2/build
@@ -7,7 +7,7 @@ PATCH=8
 VERSION=1.0.8
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://sourceware.org/pub/bzip2/bzip2-$VERSION.tar.gz
 
@@ -41,5 +41,5 @@ ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so.$MAJOR.$MINOR"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../bzip2@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../bzip2@$VERSION.tar.gz
 exit
