--- a/Archive/pigz/build
+++ b/Archive/pigz/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=2.8
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://zlib.net/pigz/pigz-$VERSION.tar.gz
 
@@ -25,5 +25,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/pigz"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../pigz@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../pigz@$VERSION.tar.gz
 exit
