--- a/Archive/xz/build
+++ b/Archive/xz/build
@@ -7,7 +7,7 @@ PATCH=4
 VERSION=5.6.4
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://tukaani.org/xz/xz-$VERSION.tar.gz
 
@@ -20,11 +20,11 @@ cd xz-$VERSION
     --disable-nls
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../xz@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../xz@$VERSION.tar.gz
 exit
