--- a/Base/mdevd/build
+++ b/Base/mdevd/build
@@ -7,7 +7,7 @@ PATCH=6
 VERSION=0.1.6.5
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/skarnet/mdevd/archive/refs/tags/v.tar.gz
 gzip -cd v$VERSION.tar.gz | tar -x
@@ -18,7 +18,7 @@ cd mdevd-$VERSION
 	--enable-static-libc
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 install -Dm644 ../mdev.conf "$DESTDIR/etc/mdev.conf"
 install -Dm755 ../mdevd.run  "$DESTDIR/etc/sv/mdevd/run"
@@ -31,5 +31,5 @@ rm -rf "$DESTDIR/usr/include"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../mdevd@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../mdevd@$VERSION.tar.gz
 exit
