--- a/Base/musl/build
+++ b/Base/musl/build
@@ -7,7 +7,7 @@ PATCH=5
 VERSION=1.2.5
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://codeberg.org/kiss-community/repo/raw/branch/master/core/musl/files/tree.h
 curl --location --remote-name --skip-existing https://codeberg.org/kiss-community/repo/raw/branch/master/core/musl/files/queue.h
@@ -32,7 +32,7 @@ cd musl-$VERSION
 	--syslibdir=/usr/lib
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 # This *should* make musl architecture-independent
 # Taken from Alpine Linux
@@ -68,5 +68,5 @@ chmod 755 "$DESTDIR/usr/bin/ldd"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../musl@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../musl@$VERSION.tar.gz
 exit
