--- a/Base/oksh/build
+++ b/Base/oksh/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=7.7
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/ibara/oksh/releases/download/oksh-/oksh-$VERSION.tar.gz
 
@@ -29,5 +29,5 @@ ln -sf oksh "$DESTDIR/usr/bin/sh"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../oksh@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../oksh@$VERSION.tar.gz
 exit
