--- a/Base/skalibs/build
+++ b/Base/skalibs/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=2.14.3.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.skarnet.org/software/skalibs/skalibs-$VERSION.tar.gz
 
@@ -19,12 +19,12 @@ cd skalibs-$VERSION
 	--with-sysdep-devurandom=yes
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 find $DESTDIR -name '*.a'   -type f -exec strip --strip-unneeded {} \;
 find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../skalibs@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../skalibs@$VERSION.tar.gz
 exit
