--- a/Base/toybox/build
+++ b/Base/toybox/build
@@ -7,7 +7,7 @@ PATCH=12
 VERSION=0.8.12
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://landley.net/toybox/downloads/toybox-$VERSION.tar.gz
 
@@ -30,5 +30,5 @@ done
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../toybox@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../toybox@$VERSION.tar.gz
 exit
