--- a/Devel/bc/build
+++ b/Devel/bc/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=7.0.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/gavinhoward/bc/releases/download//bc-$VERSION.tar.gz
 
@@ -28,5 +28,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../bc@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../bc@$VERSION.tar.gz
 exit
