--- a/Devel/libffi/build
+++ b/Devel/libffi/build
@@ -7,7 +7,7 @@ PATCH=6
 VERSION=3.4.6
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/libffi/libffi/releases/download/v/libffi-$VERSION.tar.gz
 
@@ -27,5 +27,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libffi@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libffi@$VERSION.tar.gz
 exit
