--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=1.3.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://ftp.gnu.org/gnu/mpc/mpc-$VERSION.tar.gz
 
@@ -19,12 +19,12 @@ cd mpc-$VERSION
 	--enable-shared
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libmpc@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libmpc@$VERSION.tar.gz
 exit
