--- a/Devel/libmpfr/build
+++ b/Devel/libmpfr/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=4.2.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.mpfr.org/mpfr-current/mpfr-$VERSION.tar.xz
 
@@ -20,12 +20,12 @@ cd mpfr-$VERSION
 	--enable-thread-safe
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libmpfr@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libmpfr@$VERSION.tar.gz
 exit
