--- a/Devel/make/build
+++ b/Devel/make/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=4.4.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://ftp.gnu.org/gnu/make/make-$VERSION.tar.gz
 
@@ -22,11 +22,11 @@ export LDFLAGS="$LDFLAGS -static"
 	--without-guile
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../make@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../make@$VERSION.tar.gz
 exit
