--- a/Devel/meson/build
+++ b/Devel/meson/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=1.2.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/mesonbuild/meson/archive/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
@@ -23,5 +23,5 @@ rm -rf "$DESTDIR/usr/share/polkit-1"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../meson@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../meson@$VERSION.tar.gz
 exit
