--- a/Devel/muon/build
+++ b/Devel/muon/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=git
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://git.sr.ht/~lattis/muon
 gzip -cd $VERSION.tar.gz | tar -x
@@ -23,5 +23,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/muon"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../muon@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../muon@$VERSION.tar.gz
 exit
