--- a/Fonts/ttf-hack/build
+++ b/Fonts/ttf-hack/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=3.003
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/source-foundry/Hack/releases/download/v/Hack-v-ttf.tar.gz
 gzip -cd Hack-v$VERSION-ttf.tar.gz | tar -x
@@ -17,5 +17,5 @@ cp ttf/*.ttf "$DESTDIR/usr/share/fonts/TTF"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../ttf-hack@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../ttf-hack@$VERSION.tar.gz
 exit
