--- a/Fonts/ttf-roboto/build
+++ b/Fonts/ttf-roboto/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=2.138
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/googlefonts/roboto/releases/download/v/roboto-android.zip
 mkdir build
@@ -18,5 +18,5 @@ cp build/*.ttf "$DESTDIR/usr/share/fonts/TTF"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../ttf-roboto@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../ttf-roboto@$VERSION.tar.gz
 exit
