--- a/Fonts/ttf-twemoji-color/build
+++ b/Fonts/ttf-twemoji-color/build
@@ -7,7 +7,7 @@ PATCH=2
 VERSION=14.0.2
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/13rac1/twemoji-color-font/releases/download/v/TwitterColorEmoji-SVGinOT-Linux-$VERSION.tar.gz
 
@@ -19,5 +19,5 @@ install -Dm644 LICENSE-CC-BY.txt "$DESTDIR/usr/share/LICENSES/ttf-twemoji-color.
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../ttf-twemoji-color@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../ttf-twemoji-color@$VERSION.tar.gz
 exit
