--- a/Fs/e2fsprogs/build
+++ b/Fs/e2fsprogs/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=1.47.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v/e2fsprogs-$VERSION.tar.xz
 
@@ -34,11 +34,11 @@ cd e2fsprogs-$VERSION
 	--without-udev-rules-dir
 	
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 rmdir "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../e2fsprogs@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../e2fsprogs@$VERSION.tar.gz
 exit
