--- a/Lang/perl/build
+++ b/Lang/perl/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=5.40.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.cpan.org/src/.0/perl-$VERSION.tar.gz
 
@@ -63,5 +63,5 @@ find "$DESTDIR/usr/lib" -type f -exec chmod 644 {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../perl@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../perl@$VERSION.tar.gz
 exit
