--- a/Net/git/build
+++ b/Net/git/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=2.48.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/software/scm/git/git-manpages-$VERSION.tar.xz
 curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/software/scm/git/git-$VERSION.tar.xz
@@ -39,12 +39,12 @@ EOF
 	ac_cv_fread_reads_directories=yes
 
 make LIBS="$(curl-config --static-libs) libgit.a reftable/libreftable.a xdiff/lib.a -lz"
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 mkdir -p "$DESTDIR/usr/share/man"
 xz -cd ../git-manpages-$VERSION.tar.xz | tar -x -C "$DESTDIR/usr/share/man"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../git@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../git@$VERSION.tar.gz
 exit
