--- a/Net/iproute2/build
+++ b/Net/iproute2/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=6.12.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.kernel.org/pub/linux/utils/net/iproute2/iproute2-$VERSION.tar.xz
 
@@ -38,5 +38,5 @@ strip --strip-unneeded "$DESTDIR/usr/lib/libnetlink.a"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../iproute2@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../iproute2@$VERSION.tar.gz
 exit
