--- a/Python/mako/build
+++ b/Python/mako/build
@@ -7,7 +7,7 @@ PATCH=5
 VERSION=1.3.5
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://files.pythonhosted.org/packages/source/M/Mako/Mako-$VERSION.tar.gz
 
@@ -23,5 +23,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../mako@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../mako@$VERSION.tar.gz
 exit
