--- a/Python/markupsafe/build
+++ b/Python/markupsafe/build
@@ -7,7 +7,7 @@ PATCH=5
 VERSION=2.1.5
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/pallets/markupsafe/archive/refs/tags/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
@@ -22,5 +22,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../markupsafe@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../markupsafe@$VERSION.tar.gz
 exit
