--- a/Python/setuptools/build
+++ b/Python/setuptools/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=70.0.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/pypa/setuptools/archive/refs/tags/v.tar.gz
 gzip -cd v$VERSION.tar.gz | tar -x
@@ -23,5 +23,5 @@ python setup.py install \
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../setuptools@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../setuptools@$VERSION.tar.gz
 exit
