--- a/System/expat/build
+++ b/System/expat/build
@@ -7,7 +7,7 @@ PATCH=2
 VERSION=2.6.2
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/libexpat/libexpat/releases/download/R_/expat-.tar.bz2
 bzip2 -cd expat-$VERSION.tar.bz2 | tar -x
@@ -21,12 +21,12 @@ cd expat-$VERSION
 	--without-docbook
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../expat@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../expat@$VERSION.tar.gz
 exit
