--- a/System/libedit/build
+++ b/System/libedit/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=20251016-3.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.thrysoee.dk/editline/libedit-$VERSION.tar.gz
 
@@ -27,5 +27,5 @@ rm -rf "$DESTDIR/usr/share/man/man3"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libedit@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libedit@$VERSION.tar.gz
 exit
