--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -7,19 +7,19 @@ PATCH=3
 VERSION=1.0.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/illiliti/libudev-zero/archive/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
 cd libudev-zero-$VERSION
 
 make PREFIX=/usr
-make PREFIX=/usr DESTDIR="$DESTDIR" install
+make PREFIX=/usr DESTDIR=$DESTDIR install
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libudev-zero@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libudev-zero@$VERSION.tar.gz
 exit
