--- a/System/sqlite/build
+++ b/System/sqlite/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=3.45.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://sqlite.org/2024/sqlite-autoconf-$VERSION.tar.gz
 
@@ -29,11 +29,11 @@ export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_COLUMN_METADATA"
 	--disable-readline
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../sqlite@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../sqlite@$VERSION.tar.gz
 exit
