--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=2025a
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/eggert/tz/archive/refs/tags/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
@@ -16,7 +16,7 @@ cd tz-$VERSION
 sed -i 's|sbin|bin|g' Makefile
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR=$DESTDIR install
 
 rm -rf "$DESTDIR/etc"
 rm -rf "$DESTDIR/usr/share/man/man3"
@@ -35,5 +35,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../tzdata@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../tzdata@$VERSION.tar.gz
 exit
