--- a/Text/mandoc/build
+++ b/Text/mandoc/build
@@ -7,7 +7,7 @@ PATCH=6
 VERSION=1.14.6
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://mandoc.bsd.lv/snapshots/mandoc-$VERSION.tar.gz
 
@@ -36,5 +36,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \; -exec chmod 7
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../mandoc@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../mandoc@$VERSION.tar.gz
 exit
