--- a/Text/scdoc/build
+++ b/Text/scdoc/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=1.11.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://git.sr.ht/~sircmpwn/scdoc/archive/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
@@ -20,5 +20,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/scdoc"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../scdoc@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../scdoc@$VERSION.tar.gz
 exit
