--- a/Wayland/hwdata/build
+++ b/Wayland/hwdata/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=0.382
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://github.com/vcrhonek/hwdata/archive/refs/tags/v.tar.gz
 gzip -cd v$VERSION.tar.gz | tar -x
@@ -24,5 +24,5 @@ make install
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../hwdata@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../hwdata@$VERSION.tar.gz
 exit
