--- a/Wayland/libdisplay-info/build
+++ b/Wayland/libdisplay-info/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=0.1.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/emersion/libdisplay-info/-/archive//libdisplay-info-$VERSION.tar.gz
 
@@ -29,5 +29,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libdisplay-info@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libdisplay-info@$VERSION.tar.gz
 exit
