--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -7,7 +7,7 @@ PATCH=1
 VERSION=1.13.1
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://freedesktop.org/software/libevdev/libevdev-$VERSION.tar.xz
 
@@ -17,12 +17,12 @@ cd libevdev-$VERSION
 ./configure --prefix=/usr
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libevdev@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libevdev@$VERSION.tar.gz
 exit
