--- a/Wayland/libglvnd/build
+++ b/Wayland/libglvnd/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=1.7.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/glvnd/libglvnd/-/archive/v/libglvnd-v.tar.gz
 gzip -cd libglvnd-v$VERSION.tar.gz | tar -x
@@ -23,5 +23,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libglvnd@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libglvnd@$VERSION.tar.gz
 exit
