--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=1.25.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/libinput/libinput/-/archive//libinput-$VERSION.tar.gz
 
@@ -37,5 +37,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libinput@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libinput@$VERSION.tar.gz
 exit
