--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=1.7.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://xkbcommon.org/download/libxkbcommon-$VERSION.tar.xz
 
@@ -38,5 +38,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../libxkbcommon@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../libxkbcommon@$VERSION.tar.gz
 exit
