--- a/Wayland/pixman/build
+++ b/Wayland/pixman/build
@@ -7,7 +7,7 @@ PATCH=4
 VERSION=0.43.4
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://x.org/releases/individual/lib/pixman-$VERSION.tar.xz
 
@@ -32,5 +32,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../pixman@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../pixman@$VERSION.tar.gz
 exit
