--- a/Wayland/seatd/build
+++ b/Wayland/seatd/build
@@ -7,7 +7,7 @@ PATCH=0
 VERSION=0.8.0
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://git.sr.ht/~kennylevinsen/seatd/archive/.tar.gz
 gzip -cd $VERSION.tar.gz | tar -x
@@ -30,5 +30,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../seatd@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../seatd@$VERSION.tar.gz
 exit
