--- a/Wayland/wlroots/build
+++ b/Wayland/wlroots/build
@@ -7,7 +7,7 @@ PATCH=3
 VERSION=0.17.3
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/wlroots/wlroots/-/archive//wlroots-$VERSION.tar.gz
 
@@ -31,5 +31,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../wlroots@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../wlroots@$VERSION.tar.gz
 exit
