--- a/Wayland/xkeyboard-config/build
+++ b/Wayland/xkeyboard-config/build
@@ -7,7 +7,7 @@ PATCH=
 VERSION=2.41
 
 mkdir temporary-builddir
-DESTDIR=temporary-builddir
+DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://x.org/releases/individual/data/xkeyboard-config/xkeyboard-config-$VERSION.tar.xz
 
@@ -31,5 +31,5 @@ mv "$DESTDIR/usr/share/pkgconfig" "$DESTDIR/usr/lib/pkgconfig"
 
 su
 chown -R root:root $DESTDIR
-tar -c -C $DESTDIR . | gzip > ../xkeyboard-config@$VERSION.tar.gz
+tar -zcC $DESTDIR . | gzip > ../xkeyboard-config@$VERSION.tar.gz
 exit
