Use doas instead of su

--- a/Archive/libarchive/build
+++ b/Archive/libarchive/build
@@ -39,7 +39,5 @@ ln -sf bsdcpio  "$DESTDIR/usr/bin/cpio"
 ln -sf bsdtar   "$DESTDIR/usr/bin/tar"
 ln -sf bsdunzip "$DESTDIR/usr/bin/unzip"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libarchive@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libarchive@$VERSION.tar.gz"
