--- a/Archive/xz/build
+++ b/Archive/xz/build
@@ -24,7 +24,5 @@ make DESTDIR=$DESTDIR install-strip
 
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../xz@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../xz@$VERSION.tar.gz"
