--- a/Base/init-scripts/build
+++ b/Base/init-scripts/build
@@ -28,7 +28,5 @@ $CC -static -o kpow bin/kpow.c
 install -Dm755 kpow    "$DESTDIR/usr/bin/kpow"
 strip --strip-unneeded "$DESTDIR/usr/bin/kpow"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../init-scripts@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../init-scripts@$VERSION.tar.gz"
