--- a/Devel/flex/build
+++ b/Devel/flex/build
@@ -29,7 +29,5 @@ rm -rf "$DESTDIR/usr/share/info"
 
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../flex@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../flex@$VERSION.tar.gz"
