--- a/Devel/libgmp/build
+++ b/Devel/libgmp/build
@@ -27,7 +27,5 @@ make DESTDIR=$DESTDIR install
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libgmp@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libgmp@$VERSION.tar.gz"
