--- a/Fonts/ttf-twemoji-color/build
+++ b/Fonts/ttf-twemoji-color/build
@@ -17,7 +17,5 @@ cd TwitterColorEmoji-SVGinOT-Linux-$VERSION
 install -Dm644 -t "$DESTDIR/usr/share/fonts/TTF" TwitterColorEmoji-SVGinOT.ttf
 install -Dm644 LICENSE-CC-BY.txt "$DESTDIR/usr/share/LICENSES/ttf-twemoji-color.license"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../ttf-twemoji-color@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../ttf-twemoji-color@$VERSION.tar.gz"
