--- a/System/file/build
+++ b/System/file/build
@@ -29,7 +29,5 @@ make install-strip
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../file@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../file@$VERSION.tar.gz"
