--- a/System/ncurses/build
+++ b/System/ncurses/build
@@ -25,7 +25,5 @@ find "$DESTDIR/usr/bin" ! -name 'clear' -type f -exec strip --strip-unneeded {} 
 find "$DESTDIR" -name '*.a' -type f -exec strip --strip-unneeded {} \;
 find "$DESTDIR" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../ncurses@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../ncurses@$VERSION.tar.gz"
