--- a/Text/mandoc/build
+++ b/Text/mandoc/build
@@ -34,7 +34,5 @@ make DESTDIR=$DESTDIR base-install
 
 find "$DESTDIR/usr/bin" -type f -exec chmod 755 {} \; -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../mandoc@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../mandoc@$VERSION.tar.gz"
