--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -22,7 +22,5 @@ make DESTDIR=$DESTDIR install-strip
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libevdev@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libevdev@$VERSION.tar.gz"
