--- a/Archive/bzip2/build
+++ b/Archive/bzip2/build
@@ -39,7 +39,5 @@ ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so"
 ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so.$MAJOR"
 ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so.$MAJOR.$MINOR"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../bzip2@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../bzip2@$VERSION.tar.gz"
