--- a/Archive/zlib/build
+++ b/Archive/zlib/build
@@ -25,7 +25,5 @@ find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../zlib@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../zlib@$VERSION.tar.gz"
