--- a/Base/mdevd/build
+++ b/Base/mdevd/build
@@ -29,7 +29,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/mdevd-coldplug"
 
 rm -rf "$DESTDIR/usr/include"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../mdevd@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../mdevd@$VERSION.tar.gz"
