--- a/Base/mime-types/build
+++ b/Base/mime-types/build
@@ -13,7 +13,5 @@ curl --location --remote-name --skip-existing https://svn.apache.org/repos/asf/h
 grep -v '#' mime.types > mime-processed
 install -Dm644 mime-processed "$DESTDIR/etc/mime.types"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../mime-types@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../mime-types@$VERSION.tar.gz"
