--- a/Base/skeleton/build
+++ b/Base/skeleton/build
@@ -44,7 +44,5 @@ ln -sf ../run              "$DESTDIR/var/run"
 ln -sf ../run/lock         "$DESTDIR/var/lock"
 ln -sf ../proc/self/mounts "$DESTDIR/etc/mtab"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../skeleton@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../skeleton@$VERSION.tar.gz"
