--- a/Devel/bison/build
+++ b/Devel/bison/build
@@ -26,7 +26,5 @@ rm -rf "$DESTDIR/usr/share/info"
 rm -rf "$DESTDIR/usr/share/doc"
 rm -rf "$DESTDIR/usr/share/aclocal"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../bison@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../bison@$VERSION.tar.gz"
