--- a/Devel/gdb/build
+++ b/Devel/gdb/build
@@ -25,7 +25,5 @@ make -C gdbserver DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../gdb@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../gdb@$VERSION.tar.gz"
