--- a/Devel/libffi/build
+++ b/Devel/libffi/build
@@ -25,7 +25,5 @@ make install-strip
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libffi@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libffi@$VERSION.tar.gz"
