--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -24,7 +24,5 @@ make DESTDIR=$DESTDIR install
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libmpc@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libmpc@$VERSION.tar.gz"
