--- a/Devel/libmpfr/build
+++ b/Devel/libmpfr/build
@@ -25,7 +25,5 @@ make DESTDIR=$DESTDIR install
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libmpfr@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libmpfr@$VERSION.tar.gz"
