--- a/Devel/meson/build
+++ b/Devel/meson/build
@@ -21,7 +21,5 @@ python setup.py install \
 
 rm -rf "$DESTDIR/usr/share/polkit-1"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../meson@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../meson@$VERSION.tar.gz"
