--- a/Fonts/ttf-hack/build
+++ b/Fonts/ttf-hack/build
@@ -15,7 +15,5 @@ gzip -cd Hack-v$VERSION-ttf.tar.gz | tar -x
 mkdir -p "$DESTDIR/usr/share/fonts/TTF"
 cp ttf/*.ttf "$DESTDIR/usr/share/fonts/TTF"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../ttf-hack@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../ttf-hack@$VERSION.tar.gz"
