--- a/Lang/gcc/build
+++ b/Lang/gcc/build
@@ -66,7 +66,5 @@ then
 	rm -rf "$DESTDIR/usr/lib64"
 fi
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../gcc@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../gcc@$VERSION.tar.gz"
