--- a/Net/curl/build
+++ b/Net/curl/build
@@ -39,7 +39,5 @@ rm -rf "$DESTDIR/usr/share"
 
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../curl@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../curl@$VERSION.tar.gz"
