--- a/Net/iproute2/build
+++ b/Net/iproute2/build
@@ -36,7 +36,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/ip"
 strip --strip-unneeded "$DESTDIR/usr/bin/tc"
 strip --strip-unneeded "$DESTDIR/usr/lib/libnetlink.a"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../iproute2@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../iproute2@$VERSION.tar.gz"
