--- a/Python/mako/build
+++ b/Python/mako/build
@@ -21,7 +21,5 @@ python setup.py install \
 
 find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../mako@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../mako@$VERSION.tar.gz"
