--- a/Python/markupsafe/build
+++ b/Python/markupsafe/build
@@ -20,7 +20,5 @@ python setup.py install \
 
 find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../markupsafe@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../markupsafe@$VERSION.tar.gz"
