--- a/System/expat/build
+++ b/System/expat/build
@@ -26,7 +26,5 @@ make DESTDIR=$DESTDIR install-strip
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../expat@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../expat@$VERSION.tar.gz"
