--- a/System/libedit/build
+++ b/System/libedit/build
@@ -25,7 +25,5 @@ make DESTDIR=$DESTDIR install
 find $DESTDIR -type f -name '*.la' -delete
 rm -rf "$DESTDIR/usr/share/man/man3"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libedit@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libedit@$VERSION.tar.gz"
