--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -19,7 +19,5 @@ make PREFIX=/usr DESTDIR=$DESTDIR install
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libudev-zero@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libudev-zero@$VERSION.tar.gz"
