--- a/System/sqlite/build
+++ b/System/sqlite/build
@@ -33,7 +33,5 @@ make DESTDIR=$DESTDIR install-strip
 
 find $DESTDIR -type f -name '*.la' -delete
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../sqlite@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../sqlite@$VERSION.tar.gz"
