--- a/Text/jq/build
+++ b/Text/jq/build
@@ -24,7 +24,5 @@ make DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share/doc"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../jq@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../jq@$VERSION.tar.gz"
