--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -36,7 +36,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib/xkbcommon" -type f     -exec strip --strip-unneeded {} \;
 strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../libxkbcommon@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../libxkbcommon@$VERSION.tar.gz"
