--- a/Wayland/seatd/build
+++ b/Wayland/seatd/build
@@ -28,7 +28,5 @@ ln -sf /run/runit/supervise.seatd "$DESTDIR/etc/sv/seatd/supervise"
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../seatd@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../seatd@$VERSION.tar.gz"
