--- a/Wayland/wayland/build
+++ b/Wayland/wayland/build
@@ -30,7 +30,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 strip --strip-unneeded "$DESTDIR/usr/bin/wayland-scanner"
 
-su
-chown -R root:root $DESTDIR
-tar -zcC $DESTDIR . | gzip > ../wayland@$VERSION.tar.gz
-exit
+doas chown -R root:root $DESTDIR
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../wayland@$VERSION.tar.gz"
