--- a/Net/wpa_supplicant/build
+++ b/Net/wpa_supplicant/build
@@ -34,5 +34,8 @@ mkdir -p $DESTDIR/usr/share/man/man8
 cp -f doc/docbook/*.5 $DESTDIR/usr/share/man/man5
 cp -f doc/docbook/*.8 $DESTDIR/usr/share/man/man8
 
+install -Dm755 ../wpa_supplicant.run "$DESTDIR/etc/sv/wpa_supplicant/run"
+ln -sf /run/runit/supervise.wpa_supplicant "$DESTDIR/etc/sv/wpa_supplicant/supervise"
+
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../../wpa_supplicant@$VERSION.tar.gz"
