--- a/Devel/libmpfr/build
+++ b/Devel/libmpfr/build
@@ -3,8 +3,8 @@
 PRETTY_NAME=mpfr
 MAJOR=4
 MINOR=2
-PATCH=1
-VERSION=4.2.1
+PATCH=2
+VERSION=4.2.2
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
@@ -20,7 +20,7 @@ cd mpfr-$VERSION
 	--enable-thread-safe
 
 make
-make DESTDIR=$DESTDIR install
+make DESTDIR=$DESTDIR install-strip
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
