--- a/Base/mdevd/build
+++ b/Base/mdevd/build
@@ -3,13 +3,14 @@
 PRETTY_NAME=mdevd
 MAJOR=0
 MINOR=1
-PATCH=6
-VERSION=0.1.6.5
+PATCH=7
+VERSION=0.1.7.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/skarnet/mdevd/archive/refs/tags/v.tar.gz
+curl --location --remote-name --skip-existing https://github.com/skarnet/mdevd/archive/refs/tags/v$VERSION.tar.gz
+
 gzip -cd v$VERSION.tar.gz | tar -x
 cd mdevd-$VERSION
 
