--- a/Base/util-linux/build
+++ b/Base/util-linux/build
@@ -2,14 +2,14 @@
 
 PRETTY_NAME=util-linux
 MAJOR=2
-MINOR=40
-PATCH=4
-VERSION=2.40.4
+MINOR=41
+PATCH=2
+VERSION=2.41.2
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v./util-linux-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v$MAJOR.$MINOR/util-linux-$VERSION.tar.xz
 
 xz -cd util-linux-$VERSION.tar.xz | tar -x
 cd util-linux-$VERSION
@@ -26,7 +26,10 @@ cd util-linux-$VERSION
 	--disable-makeinstall-chown \
 	--enable-libmount \
 	--enable-libblkid \
+	--enable-libfdisk \
 	--enable-libsmartcols \
+	--enable-libuuid \
+	--enable-fdisks \
 	--enable-fsck \
 	--enable-wipefs \
 	--enable-mkfs \
